Privacy Messages: Fix locked icon alignment (#5797)

--- a/src/components/left/settings/PrivacyLockedOption.module.scss
+++ b/src/components/left/settings/PrivacyLockedOption.module.scss
@@ -3,9 +3,9 @@
 }
 
 .lock-icon {
-  font-size: 1.25rem;
+  font-size: 0.875rem;
   position: absolute;
-  left: 1.0625rem;
+  left: 1.3125rem;
   top: 50%;
   transform: translateY(-50%);
   color: var(--color-gray);
